src/objects/sma__MATerritoryCollectionBaseObject__c.object
<CustomObject>
    <fields>
        <fullName>sma__ManuallyAssignedField__c</fullName>
        <label>Manually Assigned Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__TerritoryField__c</fullName>
        <label>Territory Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MapAnything Territory Base Object</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Base Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>